{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 135,
  "lineage": "4770d145-e8e1-2777-3d53-4bd5ad21c377",
  "resources": [
    {
      "module": "module.aws_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "supra_oracle_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:910883278292:instance/i-04fa133296490b7db",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fa133296490b7db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0013ed9c446e9a121",
            "private_dns": "ip-10-0-3-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c32a247c7eb1cffd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5e89e43afbdcfe",
            "tags": {
              "Name": "node-557-0"
            },
            "tags_all": {
              "Name": "node-557-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9bfec6ad3d21c1"
            ]
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_nodes.random_integer.node_ids_aws"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:910883278292:instance/i-084c544c9660aa331",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084c544c9660aa331",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3be117460d97ccd",
            "private_dns": "ip-10-0-3-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035ae87e3a3755237",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5e89e43afbdcfe",
            "tags": {
              "Name": "node-557-1"
            },
            "tags_all": {
              "Name": "node-557-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9bfec6ad3d21c1"
            ]
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_nodes.random_integer.node_ids_aws"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:910883278292:instance/i-09d9187f9a8cde099",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d9187f9a8cde099",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06425ae5dcf8051e4",
            "private_dns": "ip-10-0-3-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09d9a15f51cb9f146",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5e89e43afbdcfe",
            "tags": {
              "Name": "node-557-2"
            },
            "tags_all": {
              "Name": "node-557-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9bfec6ad3d21c1"
            ]
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_nodes.random_integer.node_ids_aws"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:910883278292:instance/i-0feb0bbd1b42cc1ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0feb0bbd1b42cc1ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f897b0f87cdf985",
            "private_dns": "ip-10-0-3-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5b5cbeb135cff19",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5e89e43afbdcfe",
            "tags": {
              "Name": "node-557-3"
            },
            "tags_all": {
              "Name": "node-557-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9bfec6ad3d21c1"
            ]
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_nodes.random_integer.node_ids_aws"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:910883278292:instance/i-0872ff89c9e593af1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0872ff89c9e593af1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a2c6f7e7d005e76",
            "private_dns": "ip-10-0-3-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c993cc43154263f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5e89e43afbdcfe",
            "tags": {
              "Name": "node-557-4"
            },
            "tags_all": {
              "Name": "node-557-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c9bfec6ad3d21c1"
            ]
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_nodes.random_integer.node_ids_aws"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:network-acl/acl-098b219d5bacd3894",
            "default_network_acl_id": "acl-098b219d5bacd3894",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-098b219d5bacd3894",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "910883278292",
            "subnet_ids": [
              "subnet-0228feebabf8e17a5",
              "subnet-03ca8708f51436fa6",
              "subnet-063c4a68bd0116a93",
              "subnet-0cb5e89e43afbdcfe",
              "subnet-0d0d544d507c34645"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-0284df23d3eea3607",
            "default_route_table_id": "rtb-0284df23d3eea3607",
            "id": "rtb-0284df23d3eea3607",
            "owner_id": "910883278292",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:security-group/sg-02c9bfec6ad3d21c1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02c9bfec6ad3d21c1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "910883278292",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-08ddf0da06f9caa81",
            "id": "rtb-08ddf0da06f9caa81",
            "owner_id": "910883278292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-088a59557a0e10c4c",
            "id": "rtb-088a59557a0e10c4c",
            "owner_id": "910883278292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-09de27175abce2711",
            "id": "rtb-09de27175abce2711",
            "owner_id": "910883278292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-0b7306387fb7a6a82",
            "id": "rtb-0b7306387fb7a6a82",
            "owner_id": "910883278292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:route-table/rtb-0438684452070efd5",
            "id": "rtb-0438684452070efd5",
            "owner_id": "910883278292",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1e",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1e",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a5b2e3364c195ed",
            "route_table_id": "rtb-08ddf0da06f9caa81",
            "subnet_id": "subnet-03ca8708f51436fa6"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_route_table.private",
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1924e68421ef7ea",
            "route_table_id": "rtb-088a59557a0e10c4c",
            "subnet_id": "subnet-0d0d544d507c34645"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_route_table.private",
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047c0fba15554a2af",
            "route_table_id": "rtb-09de27175abce2711",
            "subnet_id": "subnet-0cb5e89e43afbdcfe"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_route_table.private",
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308fd8229db0eb44",
            "route_table_id": "rtb-0b7306387fb7a6a82",
            "subnet_id": "subnet-063c4a68bd0116a93"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_route_table.private",
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e410cd368601137",
            "route_table_id": "rtb-0438684452070efd5",
            "subnet_id": "subnet-0228feebabf8e17a5"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_route_table.private",
            "module.aws_nodes.module.vpc.aws_subnet.private",
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:subnet/subnet-03ca8708f51436fa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca8708f51436fa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910883278292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:subnet/subnet-0d0d544d507c34645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0d544d507c34645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910883278292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:subnet/subnet-0cb5e89e43afbdcfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5e89e43afbdcfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910883278292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:subnet/subnet-063c4a68bd0116a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063c4a68bd0116a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910883278292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:subnet/subnet-0228feebabf8e17a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0228feebabf8e17a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910883278292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1e",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc-private-us-east-1e",
              "Terraform": "true"
            },
            "vpc_id": "vpc-004da1b249c63f0f7"
          },
          "dependencies": [
            "module.aws_nodes.module.vpc.aws_vpc.this",
            "module.aws_nodes.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_nodes.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910883278292:vpc/vpc-004da1b249c63f0f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098b219d5bacd3894",
            "default_route_table_id": "rtb-0284df23d3eea3607",
            "default_security_group_id": "sg-02c9bfec6ad3d21c1",
            "dhcp_options_id": "dopt-0bcf8dca3b3aff03c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004da1b249c63f0f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0284df23d3eea3607",
            "owner_id": "910883278292",
            "tags": {
              "Environment": "dev",
              "Name": "supra-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "supra-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}